# Artemis

./: .angular-cli.json  .bowerrc  .browserslistrc  .codacy.yml  .coderabbit.yaml  .dockerignore  .editorconfig  .env  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .huskyrc  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc  .readthedocs.yaml  .stylelintrc.json  .travis.yml  .whitesource  .yo-rc.json  AGENTS.md  AUTO_GENERATED_SPECIFICATIONS_GUIDE.md  Artemis.sln  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMBEDPDF_MIGRATION_PLAN.md  EXERCISE_VARIANT_OBJECT_MODEL.md  INSTRUCTOR_VIEW_MOCKUP_VERSIONS.md  LECTURE_PROCESSING_AUTOMATION_PLAN.md  LICENSE  MIGRATION_TEST_SUMMARY.md  POLICY_TO_QUERY_AUTO_SYNC_SUMMARY.md  PR_DESCRIPTION.md  README-DEV.md  README-SETUP.md  README-SetupExercise.md  (+108 more)
.bamboo/: cleanup-E2E-tests.sh  execute-E2E-tests.sh  execute-E2E-with-flake-detection.sh
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  artemis_xcit.tum.de.pem  dependabot.yml  issue-labeler.yml  labeler.yml  test-pr-validator-1.md
.husky/: pre-commit
.jhipster/: AnswerCounter.json  AnswerOption.json  ApollonDiagram.json  Attachment.json  Complaint.json  ComplaintResponse.json  Course.json  DragAndDropAssignment.json  DragAndDropMapping.json  DragAndDropQuestion.json  DragAndDropQuestionStatistic.json  DragAndDropStatistic.json  DragAndDropSubmittedAnswer.json  DragItem.json  DropLocation.json  DropLocationCounter.json  ExampleSubmission.json  Exercise.json  ExerciseHint.json  ExerciseResult.json  Feedback.json  FileUploadExercise.json  FileUploadSubmission.json  GroupNotification.json  Lecture.json  LtiOutcomeUrl.json  LtiUserId.json  ModelingExercise.json  ModelingSubmission.json  MultipleChoiceQuestion.json  MultipleChoiceQuestionStatistic.json  MultipleChoiceStatistic.json  MultipleChoiceSubmittedAnswer.json  Notification.json  Participation.json  PointCounter.json  ProgrammingExercise.json  ProgrammingExerciseOptions.json  ProgrammingExerciseTestCase.json  ProgrammingSubmission.json  (+32 more)
.jpb/: jpb-settings.xml  persistence-units.xml
.playwright-mcp/: page-2026-06-14T09-26-22-272Z.yml  page-2026-06-14T09-26-29-217Z.yml  page-2026-06-14T09-27-18-920Z.yml  page-2026-06-14T09-27-31-610Z.yml  page-2026-06-14T09-29-25-434Z.yml  page-2026-06-14T09-29-40-447Z.yml  page-2026-06-14T09-30-40-700Z.yml  page-2026-06-14T09-31-54-118Z.yml  page-2026-06-14T09-33-47-662Z.yml
ai-guide/: exercise-versioning-analysis.md
buildSrc/: build.gradle
checkstyle/: checkstyle.xml  rules.xml  suppressions.xml
data/: ArTEMiS 2.0.2 Database Scheme.sql  ArTEMiS 2.2.0 Database Scheme.sql  ArTEMiS 2.6.0 Database Scheme.sql
doc/: DataModel.graffle
docker/: README.md  aeolus.yml  android-e2e-tests.yml  api-gateway.yml  artemis-base.yml  artemis-dev-local-vc-local-ci-jira-mysql.yml  artemis-dev-local-vc-local-ci-mysql.yml  artemis-dev-mysql.yml  artemis-dev-postgres.yml  artemis-for-android.yml  artemis-migration-check-mysql.yml  artemis-migration-check-postgres.yml  artemis-prod-mysql.yml  artemis-prod-postgres.yml  artemis.yml  atlassian.yml  broker-registry.yml  cypress-E2E-tests-coverage-override.yml  cypress-E2E-tests-local.yml  cypress-E2E-tests-multi-node.yml  cypress-E2E-tests-mysql.yml  cypress-E2E-tests-postgres.yml  cypress-E2E-tests-postgresql.yml  cypress-E2E-tests.yml  cypress.yml  docker-compose.yml  e2e-local-fast-postgres.yml  gitlab-gitlabci.yml  gitlab-jenkins.yml  gitlab.yml  hazelcast-management-center.yml  jenkins.yml  jira.yml  local-development.yml  mailhog.yml  mailpit.yml  monitoring.yml  mysql-base.yml  mysql-for-android.yml  mysql.yml  (+22 more)
docs/: .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  conf.py  index.rst  iris-milestone-4-plan.md  iris-settings-progress.md  make.bat  milestone-4-implementation-status.md  readme.rst  requirements.txt
documentation/: .editorconfig  .npmrc  .readthedocs.yaml  .stylelintrc.json  PR_DESCRIPTION.md  README.md  docusaurus.config.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  sidebar-admin.ts  sidebar-developer.ts  sidebar-instructors.ts  (+4 more)
src/main/resources/templates/c_plus_plus/solution/: .gitignore  CMakeLists.txt
src/main/resources/templates/c_plus_plus/solution/include/: sort.hpp
src/main/resources/templates/c_plus_plus/solution/src/: sort.cpp
src/main/resources/templates/c_plus_plus/test/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Converter.py  Tests.py
src/main/resources/templates/c_plus_plus/test/src/: Helpers.hpp  sort-test.cpp
src/main/resources/templates/c_plus_plus/test/testUtils/: AbstractProgramTest.py  AbstractTest.py  Tester.py
src/main/resources/templates/c_plus_plus/test/testUtils/junit/: Junit.py  TestCase.py
src/main/resources/templates/c_plus_plus/test/tests/: TestCatch2.py  TestClangFormat.py  TestCompile.py  TestConfigure.py  TestLSan.py
src/main/resources/templates/haskell/test/: .gitignore  git.ignore.file  readme.md  run.sh  stack.yaml  test.cabal
src/main/resources/templates/haskell/test/behavior/test/: Interface.hs
src/main/resources/templates/haskell/test/test/: Interface.hs  Test.hs
src/main/resources/templates/rust/exercise/: Cargo.toml
src/main/resources/templates/rust/exercise/src/: bubble_sort.rs  context.rs  lib.rs  main.rs  merge_sort.rs  policy.rs  sort_strategy.rs
src/main/resources/templates/rust/solution/: Cargo.toml
src/main/resources/templates/rust/solution/src/: bubble_sort.rs  context.rs  lib.rs  main.rs  merge_sort.rs  policy.rs  sort_strategy.rs
src/main/resources/templates/rust/test/: .gitattributes  .gitignore  Cargo.toml  build.rs
src/main/resources/templates/rust/test/rust_template_test_macros/: Cargo.toml
src/main/resources/templates/rust/test/rust_template_test_macros/src/: lib.rs
src/main/resources/templates/rust/test/src/: lib.rs
src/main/resources/templates/rust/test/tests/: behavior.rs  structural.rs
src/main/resources/templates/rust/test/tests/structural_helpers/: mod.rs
(+40428 files in other folders)
