[package]
name = "rust-template-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false }
rust-template-exercise = { path = "assignment" }
syn = { version = "2.0.72", features = ["full"] }
